# steady-sight-overlay

./: .gitignore  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build-installers.yml
scripts/: tauri-run.mjs
src/: main.js  overlay.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
