[package]
name = "steady-sight-overlay"
version = "0.1.0"
description = "A transparent anti-motion-sickness overlay for existing 3D games."
authors = ["Steady Sight"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
